src/pages/options.css
/* ... */
@media (prefers-color-scheme: dark) {
    :root {
	--color-bkgd: #1a1a1e;
	--color-main-border: #2a2a2e;
	--color-main-border-shadow: #0c0c0d;
	--color-main-bkgd: #2a2a2e;
	--color-fieldset-border: #4a4a4f;
	--color-dlg-fieldset-border: #585858;
	--color-text-sync-status-on: #30e60b;
	--color-about-btn-bkgd: #2a2a2e;
	--color-about-btn-bkgd-hover: #38383d;
	--color-about-btn-bkgd-active: #4a4a4f;
	--color-about-btn-border: #4a4a4f;
	--color-about-btn-border-hover: #b1b1b3;
	--color-about-btn: #f9f9fa;
    }
}


body {
    background-color: var(--color-bkgd);
    font-size: 13px;
    color: var(--color-default-text);
}

#addon-icon {
    vertical-align: -14px;
    margin-right: 8px;
    width: 48px;
    height: 48px;
}

h2 {
    display: inline-block;
    margin-top: 0;
    margin-right: 6px;
    margin-bottom: 20px;
    font-size: 22px;
    font-weight: 600;
    letter-spacing: -0.2px;
}

main {
    width: 640px;
    margin: 24px auto 24px auto;
    padding: 16px;
    border: 1px solid var(--color-main-border);
    border-radius: 2px;
    box-shadow: 0 0 8px 2px var(--color-main-border-shadow);
    background-color: var(--color-main-bkgd);
}

input[type="number"],
select {
    font: caption;
    font-size: 13px;
}

input[type="number"] {
    height: 22px;
    border: 1px solid var(--color-tb-border);
    background-color: var(--color-tb-bkgd);
    color: var(--color-tb-text);
}

input[type="checkbox"] + label {
    vertical-align: 0;
}

body[data-os="win"] input[type="checkbox"] + label {
    vertical-align: 2px;
}

body[data-os="linux"]:not([data-laf="true"]) input[type="checkbox"] + label {
    vertical-align: 3px;
}

select {
    margin-bottom: 0 !important;
    vertical-align: middle;
}

body[data-laf="true"][data-os="mac"] select.browser-style {
    height: 24px;
}

fieldset {
    padding-top: 4px;
    padding-bottom: 12px;
    border-top: 1px solid var(--color-fieldset-border);
    border-right: 0;
    border-bottom: 0;
    border-left: 0;
}

fieldset:last-of-type {
    padding-bottom: 8px;
}

legend {
    margin-left: -12px;
    padding-right: 4px;
    font-size: 15px;
}

label {
    margin-right: 4px;
}

button {
    min-width: 88px;
    height: 32px;
    padding: 0 12px 0;
    font: caption;
    font-size: 15px;
}

body[data-os="mac"] button {
    height: 26px;
}

progress {
    width: 100%;
}

.row {
    margin-top: 4px;
    margin-bottom: 4px;
    margin-left: 4px;
}

.indent {
    margin-left: 2em;
}

.note, description {
    margin-top: 6px;
    margin-bottom: 16px;
    margin-right: 18px;
}

.note {
    font-size: 11.5px;
}

.description {
    font-size: 13px;
}

.example {
    font-size: 11.5px;
}

#html-paste-options {
    width: 420px;
    margin-top: 4px;
}

#auto-inc-plchldrs-start-val {
    width: 64px;
}

#backup-reminder-freq {
    vertical-align: 0;
}

body[data-os="win"] #backup-reminder-freq {
    vertical-align: 1px;
}

body[data-os="linux"]:not([data-laf="true"]) #backup-reminder-freq {
    vertical-align: 3px;
}

#backup-reminder-freq + label {
    margin-left: 4px;
}

body[data-os="win"] #backup-reminder-freq + label {
    vertical-align: 2px;
}

body[data-os="linux"]:not([data-laf="true"]) #backup-reminder-freq + label {
    vertical-align: 3px;
}

body[data-locale="fr"] #skip-backup-label {
    letter-spacing: 0px;
}

body[data-locale="de"] #skip-backup-label {
    letter-spacing: 0px;
}

#wnds-dlgs-settings {
    margin-top: 8px;
}

#sync-options .description {
    margin-top: 0;
    margin-bottom: 6px;
}

#sync-status {
    font-size: 15px;
}

.sync-status-on {
    color: var(--color-text-sync-status-on);
}

.sync-status-on::after {
    content: " ";
    display: inline-block;
    width: 18px;
    height: 18px;
    margin-left: 6px;
    background-image: url("../img/success.svg");
    background-size: 18px 18px;
    background-repeat: no-repeat;
    vertical-align: text-bottom;
    color: #006504;
}

#show-sync-help {
    cursor: pointer;
}

#sync-settings {
    margin-right: 16px;
}

#about-btn {
    min-width: unset;
    height: unset;
    float: right;
    border: 1px solid var(--color-about-btn-border);
    padding: 2px 8px;
    background-color: var(--color-about-btn-bkgd);
    border-radius: 3px;
    font-size: 11px;
    font-weight: 400;
    color: var(--color-about-btn);
}

#about-btn:hover {
    border-color: var(--color-btn-hover-border);
    background-color: var(--color-about-btn-bkgd-hover);
}

#about-btn:active {   
    border: 1px solid #b1b1b3;
    background-color: var(--color-about-btn-bkgd-active);
}

.lightbox {
    top: 64px;
    padding-left: 22px;
    padding-right: 22px;
    border-radius: 4px;
    font-size: 15px;
}

.lightbox p {
    font-size: 13px;
}

.lightbox fieldset {
    border-top-color: var(--color-dlg-fieldset-border);
}

.lightbox .label {
    font-size: 15px;
}

.lightbox input[type="text"] {
    font: caption;
}

.lightbox .dlg-subhead {
    font-size: 15px;
    font-weight: bold;
}

.lightbox .dlg-subhead:first-of-type {
    margin-top: 6px;
}

.lightbox > .dlg-btns {
    bottom: 24px;
    right: 14px;
}

.lightbox > .dlg-btns > button {
    min-width: 96px;
    font-size: 15px !important;
}

.lightbox input[type="text"] {
    height: 28px;
    font-size: 15px;
}

.lightbox input[type="text"][disabled],
.lightbox input[type="text"][disabled]:hover,
.lightbox input[type="text"][readonly],
.lightbox input[type="text"][readonly]:hover{
    border-bottom: 1px dotted;
}

.lightbox input[type="text"]:active {
    border: 1px solid #0996f8;
}

.lightbox input[type="text"]:focus,
.lightbox input[type="text"]:focus:hover {
    border-color: #0996f8;
    box-shadow: 0 0 0 2px rgba(97, 181, 255, 0.75);
}

.lightbox .row {
    margin-left: unset;
}

.lightbox .border-bottom {
    border-bottom: 1px solid #ddd;
    padding-bottom: 18px;
}

#wnds-dlgs-opts-dlg {
    top: 160px;
    --width: 500px;
    --height: 226px;
}

body[data-locale="fr"] #wnds-dlgs-opts-dlg {
    --width: 572px;
}
/* ... */

